# flext-ldif

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETED-QA.md  DOCKER_INTEGRATION.md  Makefile  README.md  TODO.md  api-reference.md  base.mk  configuration.md  conftest.py  custom.mk  custom.mk.rej  development.md  directory.ldif  getting-started.md  history  history.json  index.md  ldif_api.py  ldif_cli.py  ldif_config.py  ldif_core.py  ldif_exceptions.py  ldif_models.py  ldif_services.py  ldif_utils.py  ldif_validation.py  meltano.yml  mkdocs.yml  oid_schema.ldif  output.txt  output_all.txt  output_verbose.txt  pyproject.toml  (+20 more)
.beads/backup/: backup_state.json  manifest
.meltano/: meltano.db
.scope/: config.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  comprehensive_legacy_patterns_catalog_2025.md  development_patterns.md  flext_qa_refactor_progress_2025.md  flext_qa_refactor_progress_final_2025.md  legacy_elimination_completion_status_2025.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
adr/: README.md  adr-001-rfc-first-design.md  adr-002-universal-conversion-matrix.md  adr-003-dn-case-registry.md  adr-004-memory-bound-architecture.md  adr-005-pluggable-quirks-system.md  adr-006-simplification-refactoring.md
diagrams/: README.md  container-architecture.puml  quality-attributes.puml
docs/: API.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONSTANTS_PATTERN.md  COVERAGE_IMPROVEMENT_PLAN.md  EXAMPLES.md  FILTERS.md  README.md  RFC_FIRST_REFACTORING_PLAN.md  SERVER_API_USAGE_PATTERN.md  SORTING.md  TODO.md  api-reference.md  architecture-analysis.md  architecture-overview.md  architecture.md  ast-analysis-report.md  ast-analysis-script.py  configuration.md  development.md  flext_ldif_parse_acl_usages.md  generic-library-plan.md  getting-started.md  index.md  integration.md  plan-end.md  qa-final-report.md  qa-summary.md  troubleshooting.md
docs/adr/: ADR-001-rfc-first-design.md  ADR-002-universal-conversion-matrix.md  ADR-003-dn-case-registry.md  ADR-004-memory-bound-architecture.md  ADR-005-pluggable-quirks-system.md  ADR-006-simplification-refactoring.md  README.md  adr-001-rfc-first-design.md  adr-002-universal-conversion-matrix.md  adr-003-dn-case-registry.md  adr-004-memory-bound-architecture.md  adr-005-pluggable-quirks-system.md  adr-006-simplification-refactoring.md
docs/api/: API.md
docs/api-reference/: README.md
docs/architecture/: ARCHITECTURE.md
docs/development/: DOCKER_INTEGRATION.md
docs/diagrams/: README.md  component-architecture.puml  container-architecture.puml  data-flow-architecture.puml  quality-attributes.puml  security-architecture.puml  system-context.puml
docs/examples/: EXAMPLES.md  advanced-patterns.md  basic-usage.md  integration-examples.md
docs/guides/: CONSTANTS_PATTERN.md  README.md  SERVER_API_USAGE_PATTERN.md  SORTING.md  configuration.md  constants-pattern.md  development.md  filters.md  flext_ldif_parse_acl_usages.md  getting-started.md  integration.md  security.md  server-api-usage-pattern.md  skill-automation-pattern.md  sorting.md  testing.md  troubleshooting.md
docs/migration/: v0.9-to-v1.0-migration.md
docs/refactoring/: PHASE_2A_FLEXTLDIFSERVER_REFACTOR.md  PHASE_2_SERVICE_LAYER.md  phase-2-service-layer.md  phase-2a-flextldifserver-refactor.md  phase2.1-parser-service-extraction.md
docs/standards/: python-module-organization.md
examples/: 01_basic_parsing.py  01_basic_usage.py  02_cli_integration.py  02_entry_operations.py  02_server_specific_quirks.py  03_error_handling.py  03_validation_analysis.py  03_writing_ldif.py  04_server_migration.py  04_simple_docker_test.py  04_validation.py  05_advanced_validation.py  05_migration.py  05_schema_operations.py  06_acl_processing.py  06_complete_validation.py  06_custom_quirks.py  07_advanced_processing.py  07_demo.py  07_ldif_service_showcase.py  08_complete_workflow.py  08_config_usage.py  README.md  __init__.py  _models.py  advanced_ldif_processing.py  advanced_validation.py  basic_parsing.py  cli_integration.py  complete_validation_examples.py  demo_structured_migration.py  enterprise_examples.py  error_handling.py  run_with_docker_openldap.py  run_with_docker_openldap.py.broken  simple_docker_test.py  workflow_output.ldif
examples/schema_compliant_output/: entries.ldif  schema.ldif
examples/workflow_target/: source.ldif
guides/: configuration.md  constants-pattern.md  development.md  filters.md  flext_ldif_parse_acl_usages.md  getting-started.md  integration.md  security.md  server-api-usage-pattern.md  sorting.md  testing.md  troubleshooting.md
refactoring/: phase-2-service-layer.md
reports/: pip-audit.json  security.json
scripts/: README.md  analyze_and_replace.py  analyze_server_performance.py  analyze_unused_code.py  analyze_unused_code_v2.py  refactor_all_tests.py  refactor_test_consolidation.py
scripts/documentation/: __init__.py  audit.py  build.py  fix.py  generate.py  readme_standardizer.py  shared.py  validate.py
scripts/github/: pr_workspace.py
scripts/release/: run.py
src/: README.md  ldif3.pyi
src/flext_ldif/: __init__.py  __init__.pyi  _config.py  (+116 more)
tests/: README.md  __init__.py  __init__.pyi  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _models.py  base.py  conftest.py  conftest_hook.py  conftest_project.py  conftest_shared.py  constants.py  docker_fixtures.py  integration_verification.py  models.py  phase4_syntax_verification.py  protocols.py  settings.py  support.py  test_api_coverage.py  test_api_coverage_boost.py  test_api_enterprise.py  test_cli.py  test_cli_basic_coverage.py  test_cli_comprehensive.py  test_cli_edge_cases.py  test_cli_massive_coverage.py  test_core_coverage.py  test_core_enterprise.py  test_coverage_boost.py  test_coverage_targeted.py  test_direct_100_coverage.py  test_domain_events.py  test_domain_specifications.py  test_domain_values.py  test_e2e_enterprise.py  test_exceptions.py  test_factory.py  (+24 more)
(+972 files in other folders)
